# LegalAI

./: pyproject.toml
src/legalaid/: __init__.py  main.py
src/legalaid/agent/: agentix.py
src/legalaid/chat/: controller.py  dtos.py  index.html  models.py  routes.py
src/legalaid/database/: db.py  setting.py
src/legalaid/user/: auth.html  controller.py  dtos.py  models.py  routes.py
