[project]
name = "legalaid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rana Dedar", email = "rajpotdedar@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "openai>=2.33.0",
    "openai-agents>=0.14.8",
    "psycopg2-binary>=2.9.10",
    "pwdlib[argon2]>=0.3.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[project.scripts]
legalaid = "legalaid:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
